test/fixtures/commonmark/bad.txt
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src line: 4653

.
* a *
.
<p>* a *</p>
.

error:

<ul>
<li>a *</li>
</ul>


